--- a/TolyID/MVVM/Views/CadastroDeCaptura/DadosGeraisView.xaml
+++ b/TolyID/MVVM/Views/CadastroDeCaptura/DadosGeraisView.xaml
@@ -14,65 +14,78 @@
              Shell.BackgroundColor="{StaticResource Primary}">
 
     <ScrollView>
-        <VerticalStackLayout Spacing="20" Padding="20">
+        <Grid>
 
-            <input:FormView Spacing="20" SubmitCommand="{Binding IrParaFichaAnestesicaCommand}">
+            <VerticalStackLayout Spacing="20" Padding="20">
 
-                <material:TextField Title="Número de Identificação" Keyboard="Numeric"
-                                Text="{Binding Captura.DadosGerais.NumeroIdentificacao}">
-                    <validation:RequiredValidation Message="Campo obrigatório!"/>
-                    <validation:RegexValidation Message="Não insira vírgulas!" Pattern="^[^.,]+$"/>
+                <input:FormView Spacing="20" SubmitCommand="{Binding IrParaFichaAnestesicaCommand}">
 
-                </material:TextField>
+                    <material:TextField Title="Número de Identificação" Keyboard="Numeric"
+                                    Text="{Binding Captura.DadosGerais.NumeroIdentificacao}">
+                        <validation:RequiredValidation Message="Campo obrigatório!"/>
+                        <validation:RegexValidation Message="Não insira vírgulas!" Pattern="^[^.,]+$"/>
 
-                <material:TextField Title="Local de Captura"
-                            Text="{Binding Captura.DadosGerais.LocalDeCaptura}">
-                    <validation:RequiredValidation Message="Campo obrigatório!"/>
-                </material:TextField>
+                    </material:TextField>
 
-                <material:TextField Title="Equipe Responsável"
-                            Text="{Binding Captura.DadosGerais.EquipeResponsavel}">
-                    <validation:RequiredValidation Message="Campo obrigatório!"/>
-                </material:TextField>
+                    <material:TextField Title="Local de Captura"
+                                Text="{Binding Captura.DadosGerais.LocalDeCaptura}">
+                        <validation:RequiredValidation Message="Campo obrigatório!"/>
+                    </material:TextField>
 
-                <material:TextField Title="Instituição" 
-                            Text="{Binding Captura.DadosGerais.Instituicao}">
-                    <validation:RequiredValidation Message="Campo obrigatório!"/>
-                </material:TextField>
+                    <material:TextField Title="Equipe Responsável"
+                                Text="{Binding Captura.DadosGerais.EquipeResponsavel}">
+                        <validation:RequiredValidation Message="Campo obrigatório!"/>
+                    </material:TextField>
 
-                <material:TextField Title="Peso" Keyboard="Numeric"
-                            Text="{Binding Captura.DadosGerais.Peso}">
-                    <validation:RequiredValidation Message="Campo obrigatório!"/>
-                </material:TextField>
+                    <material:TextField Title="Instituição" 
+                                Text="{Binding Captura.DadosGerais.Instituicao}">
+                        <validation:RequiredValidation Message="Campo obrigatório!"/>
+                    </material:TextField>
 
-                <material:DatePickerField Title="Data de Captura"
-                                Date="{Binding Captura.DadosGerais.DataDeCaptura}">
-                    <validation:RequiredValidation Message="Campo obrigatório!"/>
-                </material:DatePickerField>
+                    <material:TextField Title="Peso" Keyboard="Numeric"
+                                Text="{Binding Captura.DadosGerais.Peso}">
+                        <validation:RequiredValidation Message="Campo obrigatório!"/>
+                    </material:TextField>
 
-                <material:TimePickerField Title="Horário de Captura"
-                                Time="{Binding Captura.DadosGerais.HorarioDeCaptura}">
-                    <validation:RequiredValidation Message="Campo obrigatório!"/>
-                </material:TimePickerField>
+                    <material:DatePickerField Title="Data de Captura"
+                                    Date="{Binding Captura.DadosGerais.DataDeCaptura}">
+                        <validation:RequiredValidation Message="Campo obrigatório!"/>
+                    </material:DatePickerField>
 
-                <material:TextField Title="Contato do Responsável"
-                            Text="{Binding Captura.DadosGerais.ContatoDoResponsavel}">
-                    <validation:RequiredValidation Message="Campo obrigatório!"/>
-                </material:TextField>
+                    <material:TimePickerField Title="Horário de Captura"
+                                    Time="{Binding Captura.DadosGerais.HorarioDeCaptura}">
+                        <validation:RequiredValidation Message="Campo obrigatório!"/>
+                    </material:TimePickerField>
 
-                <material:EditorField Title="Observações"
-                                      Text="{Binding Captura.DadosGerais.Observacoes}"
-                                      MaxLength="50"/>
+                    <material:TextField Title="Contato do Responsável"
+                                Text="{Binding Captura.DadosGerais.ContatoDoResponsavel}">
+                        <validation:RequiredValidation Message="Campo obrigatório!"/>
+                    </material:TextField>
 
-                <Button Text="Próximo"
-                        TextColor="White"
-                        Background="{StaticResource Primary}"
-                        WidthRequest="100"
-                        CornerRadius="25"
-                        input:FormView.IsSubmitButton="True"/>
-                
-            </input:FormView>
+                    <material:EditorField Title="Observações"
+                                          Text="{Binding Captura.DadosGerais.Observacoes}"
+                                          MaxLength="50"/>
 
-        </VerticalStackLayout>
+                    <Button Text="Próximo"
+                            TextColor="White"
+                            Background="{StaticResource Primary}"
+                            WidthRequest="100"
+                            CornerRadius="25"
+                            input:FormView.IsSubmitButton="True"/>
+
+                </input:FormView>
+
+            </VerticalStackLayout>
+            
+            <!-- INDICADOR DE SALVAMENTO EM ANDAMENTO -->
+            <BoxView IsVisible="{Binding IsBusy}"
+                     Opacity=".3"/>
+
+            <ActivityIndicator IsRunning="{Binding IsBusy}"
+                               IsVisible="{Binding IsBusy}"
+                               VerticalOptions="Center"/>
+            
+        </Grid>
+
     </ScrollView>
 </ContentPage>
