--- a/TolyID/MVVM/Views/CapturaView.xaml
+++ b/TolyID/MVVM/Views/CapturaView.xaml
@@ -13,7 +13,7 @@
 
     <Shell.TitleView>
         <Grid ColumnDefinitions="7*, 3*">
-            <Label Text="{Binding Captura.DadosGerais.DataDeCaptura,StringFormat='{0:dd/MM/yyyy}'}" TextColor="White" FontSize="20" FontFamily="Inter-Medium" VerticalOptions="Center"/>
+            <Label Text="{Binding Captura.DadosGerais.DataHoraDeCaptura,StringFormat='{0:dd/MM/yyyy}'}" TextColor="White" FontSize="20" FontFamily="Inter-Medium" VerticalOptions="Center"/>
             <Button Grid.Column="2" ImageSource="icone_editar.png" HorizontalOptions="End" BackgroundColor="Transparent" Command="{Binding EditaCapturaCommand}"/>
         </Grid>
     </Shell.TitleView>
@@ -66,10 +66,10 @@
                                                     Text="{Binding Captura.DadosGerais.Peso}" />
 
                                 <material:DatePickerField Title="Data de Captura" IsEnabled="False"
-                                                    Date="{Binding Captura.DadosGerais.DataDeCaptura}" />
+                                                    Date="{Binding Captura.DadosGerais.DataHoraDeCaptura}" />
 
                                 <material:TimePickerField Title="Horário de Captura" IsEnabled="False"
-                                                    Time="{Binding Captura.DadosGerais.HorarioDeCaptura}" />
+                                                    Time="{Binding HorarioDeCaptura}" />
 
                                 <material:TextField Title="Contato do Responsável" IsEnabled="False"
                                                     Text="{Binding Captura.DadosGerais.ContatoDoResponsavel}" />
