--- a/TolyID/MVVM/Views/ConfiguracoesView.xaml
+++ b/TolyID/MVVM/Views/ConfiguracoesView.xaml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:vm="clr-namespace:TolyID.MVVM.ViewModels"
              xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
              xmlns:material="http://schemas.enisn-projects.io/dotnet/maui/uraniumui/material"
              xmlns:input="clr-namespace:InputKit.Shared.Controls;assembly=InputKit.Maui"
              xmlns:validation="clr-namespace:InputKit.Shared.Validations;assembly=InputKit.Maui"
+             x:DataType="vm:ConfiguracoesViewModel"
              x:Class="TolyID.MVVM.Views.ConfiguracoesView"
              Title="Configurações"
              Shell.BackgroundColor="{StaticResource Primary}"
@@ -31,14 +33,21 @@
             
         </toolkit:Expander>-->
 
-        <Label Text="Digite aqui o endereço IP onde a API está rodando"
+        <Label Text="Digite o endereço IP da API"
                FontSize="13"/>
-        
-        <material:TextField Title="Endereço IP"/>
-        
-        <Button Text="Salvar alterações"
-                TextColor="White"
-                BackgroundColor="{StaticResource Primary}"/>
+
+        <input:FormView SubmitCommand="{Binding AtualizaIpCommand}" Spacing="10">
+            <material:TextField Title="Endereço IP" Text="{Binding Ip}">
+                <validation:RequiredValidation Message="Preencha o campo!"/> 
+            </material:TextField>
+
+            <Button Text="Salvar alterações"
+                    TextColor="White"
+                    BackgroundColor="{StaticResource Primary}"
+                    input:FormView.IsSubmitButton="True"/>
+            
+        </input:FormView>
+
 
     </VerticalStackLayout>
 </ContentPage>
